[package]
name = "security_hall"
version = "0.2.1"
authors = ["BlackHoleFox <blackholefoxdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.1"
flexi_logger = "0.14"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sled = { version = "0.29", features = ["compression"] }
toml = "0.5"
warp = "0.1"